<resources>
    <string name="app_name">messages_application_project</string>
    <string name="welcome_to_the_chat">Welcome to the chat!</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="row_messsage_userName_template">%1$s: %2$s</string>
    <string name="row_message_time_template">%1$d/%2$d at %3$s:%4$s</string>
    <string name="user_name">USER NAME</string>
    <string name="user_status">USER STATUS</string>
    <string name="preview">Preview:</string>
    <string name="to">TO:</string>
    <string name="date">DATE</string>
    <string name="username">userName:</string>
    <string name="name">NAME:</string>
    <string name="status">STATUS:</string>
    <string name="user_id">USER ID</string>
    <string name="unblock_user">UNBLOCK USER</string>
    <string name="chats">Chats</string>
    <string name="sent_messages">Sent Messages</string>
    <string name="here_you_can_change_your_name_and_your_status">Here you can change your name and your status.</string>
    <string name="received_messages">Received Messages</string>
    <string name="contacts">Contacts</string>
    <string name="type_user_id">Type user ID</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="blocked_contacts">Blocked Contacts</string>
    <string name="text">TEXT</string>
    <string name="your_message">Your Message:</string>
    <string name="send">SEND</string>
    <string name="type_your_id_here">Type your ID here.</string>
    <string name="type_your_password_here">Type your password here.</string>
    <string name="type_your_name_here">Type your name here.</string>
    <string-array name="profile_status_values">
        <item>AVAILABLE</item>
        <item>BUSY</item>
        <item>AWAY</item>
    </string-array>
</resources>