<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    >

    <TextView
        android:id="@+id/adapter_blocked_row_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"

        android:text="@string/user_name"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/adapter_blocked_row_unblock_btn"

        />
    <TextView
        android:id="@+id/adapter_blocked_row_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/user_id"

        app:layout_constraintTop_toBottomOf="@id/adapter_blocked_row_name"
        app:layout_constraintStart_toStartOf="@+id/adapter_blocked_row_name"
        app:layout_constraintEnd_toStartOf="@id/adapter_blocked_row_unblock_btn"
        />
    <Button
        android:id="@+id/adapter_blocked_row_unblock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"

        android:text="@string/unblock_user"

        app:layout_constraintTop_toTopOf="@+id/adapter_blocked_row_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/adapter_blocked_row_name"
        />
</androidx.constraintlayout.widget.ConstraintLayout>