<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_tv_welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tiet_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/type_your_id_here" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_til_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tiet_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_password_here"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/main_tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/welcome_to_the_chat"
        android:textColor="@color/black"

        app:layout_constraintBottom_toTopOf="@+id/main_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.65"
        />

    <Button
        android:id="@+id/main_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/log_in"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/main_button_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/create_account"


        app:layout_constraintEnd_toEndOf="@+id/main_button_login"
        app:layout_constraintStart_toStartOf="@+id/main_button_login"
        app:layout_constraintTop_toBottomOf="@+id/main_button_login" />

    <ImageView
        android:id="@+id/main_image_bug"
        android:layout_width="120dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toTopOf="@id/main_button_login"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456"
        app:srcCompat="@drawable/res_android_bug_waving" />


</androidx.constraintlayout.widget.ConstraintLayout>