<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom"
    tools:context=".SendMessageActivity">

    <TextView
        android:id="@+id/send_message_tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:text="@string/to"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/send_message_til_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/send_message_tv_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/send_message_tv_username"
        app:layout_constraintTop_toBottomOf="@+id/send_message_tv_username"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/send_message_tiet_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/your_message" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_message_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:text="@string/send"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>