<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom"
    tools:context=".fragments.ContactsFragment">

    <TextView
        android:id="@+id/contacts_tv_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:text="@string/contacts"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/contacts_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/contacts_til_add_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts_tv_contacts" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contacts_til_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintTop_toBottomOf="@+id/contacts_lv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contacts_button_add"
        >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/contacts_tiet_add_contact"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_user_id"

/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/contacts_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        android:text="@string/add_contact"
        app:layout_constraintTop_toBottomOf="@id/contacts_til_add_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>